--- a/assets/sass/_vic_styles.scss
+++ b/assets/sass/_vic_styles.scss
@@ -1,114 +1,37 @@
-// injector
-@import '/../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss';
-@import '/../bower_components/neat/app/assets/stylesheets/_neat.scss';
-// endinjector
-
-
+// Third party Mixins 
 @import '../../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss';
 @import '../../bower_components/neat/app/assets/stylesheets/_neat.scss';
 
-/* First level of partials is injected through Grunt */
 
+
+
+
+
+// ITCSS
+// Settings - Configs; Brand colors, spacing units, variables ect
+// Tools - Global Mixins & Helper functions - including third party mixins - Bourbon & Neat
+// Generic - Low specificity ie. *. Resets, Normalise.css 
+// Base - Unclassed elements; Type slectors - h1-h6, links, lists ect
+// Objects - Deisgn patterns; No cosmetics
+// Components - Deisgned peices of UI, only classes.
+// Trumps (Outdo) - Overirdes; Helper classes, only effect one part of DOM
+
+
+// Settings -------------
+@import '_settings/_settings.base.scss';
+
+//Tools -----------------
+@import '_tools/_tools.base.scss';
+
+// Generic --------------
+@import '_generic/_generic.base.scss';
+
+// Base -----------------
+@import '_base/_base.base.scss';
 
 //-----------------------
 
 
-@font-face {
-    font-family: 'National';
-    font-weight: 400;
-    src: url('/assets/fonts/NationalWebLF-Regular.eot');
-    src: url('/assets/fonts/NationalWebLF-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/assets/fonts/NationalWebLF-Regular.woff') format('woff'), /* Modern Browsers */
-         url('/assets/fonts/NationalWebLF-Regular.ttf') format('truetype'); /* Safari, Android, iOS */
-}
-
-@font-face {
-    font-family: 'National';
-    font-weight: 500;
-    src: url('/assets/fonts/NationalWebLF-Semibold.eot');
-    src: url('/assets/fonts/NationalWebLF-Semibold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/assets/fonts/NationalWebLF-Semibold.woff') format('woff'), /* Modern Browsers */
-         url('/assets/fonts/NationalWebLF-Semibold.ttf') format('truetype'); /* Safari, Android, iOS */
-}
-
-@font-face {
-    font-family: 'National';
-    font-weight: 600;
-    src: url('/assets/fonts/NationalWebLF-Extrabold.eot');
-    src: url('/assets/fonts/NationalWebLF-Extrabold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/assets/fonts/NationalWebLF-Extrabold.woff') format('woff'), /* Modern Browsers */
-         url('/assets/fonts/NationalWebLF-Extrabold.ttf') format('truetype'); /* Safari, Android, iOS */
-}
-
-
-@font-face
-{
-    font-family: 'fonticons';
-    src: url('../fonts/fontello.eot');
-    src: url('../fonts/fontello.eot#iefix') format('embedded-opentype'),
-        url('../fonts/fontello.woff') format('woff'),
-        url('../fonts/fontello.ttf') format('truetype'),
-        url('../fonts/fontello.svg#fontello') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-$font_display: 'National','Segoe WP Semibold', 'Nimbus Sans L', Arial, 'Helvetica Neue', 'Helvetica', sans-serif; // WP Segoe for Window Phone, Nimbus for Linux
-$font_body: 'Segoe WP', 'Nimbus Sans L', Arial, 'Helvetica Neue', 'Helvetica', sans-serif; //  WP Segoe for Window Phone, Nimbus for Linux, defaults for everyone else: should be Helv Neue on iOS, Helv on Mac, Arial on Windows
-
-// Colors
-//Base
-$white: #fff;
-
-// Vic Colours
-$vic-green: #115737;
-$vic-black: #1d2624;
-$blue: #005ea5;
-
-
-
-// Typography
-$base-font-family: $helvetica;
-$heading-font-family: $base-font-family;
-
-// Font Sizes
-$base-font-size: 1em;
-
-// Line height
-$base-line-height: 1.5;
-$heading-line-height: 1.2;
-
-// Other Sizes
-$base-border-radius: 3px;
-$base-spacing: $base-line-height * 1em;
-$small-spacing: $base-spacing / 2;
-$base-z-index: 0;
-
-// Colors
-$blue: #1565c0;
-$dark-gray: #333;
-$medium-gray: #999;
-$light-gray: #ddd;
-
-// Font Colors
-$base-font-color: $dark-gray;
-$action-color: $blue;
-
-// Border
-$base-border-color: $light-gray;
-$base-border: 1px solid $base-border-color;
-
-// Background Colors
-$base-background-color: #fff;
-$secondary-background-color: tint($base-border-color, 75%);
-
-// Forms
-$form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
-
-// Animations
-$base-duration: 150ms;
-$base-timing: ease;
 
 #{$all-buttons} {
   appearance: none;
@@ -182,114 +105,7 @@ select[multiple=multiple] {
 }
 
 
-body {
-  color: $base-font-color;
-  font-family: $base-font-family;
-  font-feature-settings: "kern", "liga", "pnum";
-  font-size: $base-font-size;
-  line-height: $base-line-height;
-}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: $heading-font-family;
-  font-size: $base-font-size;
-  line-height: $heading-line-height;
-  margin: 0 0 $small-spacing;
-}
-
-p {
-  margin: 0 0 $small-spacing;
-}
-
-a {
-  color: $action-color;
-  text-decoration: none;
-  transition: color $base-duration $base-timing;
-
-  &:active,
-  &:focus,
-  &:hover {
-    color: lighten($action-color, 15%);
-  }
-}
-
-hr {
-  border-bottom: $base-border;
-  border-left: 0;
-  border-right: 0;
-  border-top: 0;
-  margin: $base-spacing 0;
-}
-
-img,
-picture {
-  margin: 0;
-  max-width: 100%;
-}
-
-
-
-ul,
-ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-
-  &%default-ul {
-    list-style-type: disc;
-    margin-bottom: $small-spacing;
-    padding-left: $base-spacing;
-  }
-
-  &%default-ol {
-    list-style-type: decimal;
-    margin-bottom: $small-spacing;
-    padding-left: $base-spacing;
-  }
-}
-
-dl {
-  margin-bottom: $small-spacing;
-
-  dt {
-    font-weight: bold;
-    margin-top: $small-spacing;
-  }
-
-  dd {
-    margin: 0;
-  }
-}
-
-
-
-
-
-@mixin hoverify ()
-{
-    &:hover, &:active, &:focus
-    {
-        @content;
-    }
-}
-
-@mixin objectify ( $display: inline-block, $content: "" )
-{
-    position: relative;
-    display: inline-block;
-    content: $content,
-}
-
-@mixin iconify ( $display: inline-block, $ico-code: "" )
-{
-    font-family: "fonticons";
-    @include objectify ( $display, $ico-code );
-}
 
 
 /* == ICONS ====================================== */
@@ -322,27 +138,6 @@ $ico-magnifier:         '\e801';
 
 
 
-//-----------------------
-//overirdes refactor
-input[type=text] {
-    min-height: 38px;
-    border: 2px solid #b0b0b0;
-    border-radius: 0;
-    &:focus {
-        border-color: $blue;
-        box-shadow: none;
-    }
-}
-
-
-body {
-    font: {
-        family: $font_body;
-    }
-
-    min-height: 2000px;
-    overflow-x: hidden;
-}
 
 
 
@@ -377,7 +172,7 @@ nav {
     }
     a {
         font: {
-            family: $font_display;
+            family: $font_heading_family;
             size: 1.5em;
             }
         font-size: 1.5em;
@@ -508,21 +303,6 @@ nav {
     }
 }
 
-
-/**
- * Reset Styles
- */
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-body {
-    margin: 0;
-}
 
 
 /* Responsive: Portrait tablets and up */
