Finsih ITs settup

--- a/assets/sass/_vic_styles.scss
+++ b/assets/sass/_vic_styles.scss
@@ -29,295 +29,13 @@
 // Base -----------------
 @import '_base/_base.base.scss';
 
+// Objects -----------------
+@import '_objects/_objects.base.scss';
+
+// Components -----------------
+@import '_compnents/_compnents.base.scss';
+
+// Trumps -----------------
+@import '_trumps/_trumps.base.scss';
+
 //-----------------------
-
-
-
-#{$all-buttons} {
-  appearance: none;
-  background-color: $action-color;
-  border: 0;
-  border-radius: $base-border-radius;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  -webkit-font-smoothing: antialiased;
-  font-weight: 600;
-  line-height: 1;
-  padding: $small-spacing $base-spacing;
-  text-decoration: none;
-  transition: background-color $base-duration $base-timing;
-  user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-
-  &:hover,
-  &:focus {
-    background-color: shade($action-color, 20%);
-    color: #fff;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.5;
-
-    &:hover {
-      background-color: $action-color;
-    }
-  }
-}
-
-
-#{$all-text-inputs},
-select[multiple=multiple] {
-  background-color: $base-background-color;
-  border: $base-border;
-  border-radius: $base-border-radius;
-  box-shadow: $form-box-shadow;
-  box-sizing: border-box;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  margin-bottom: $small-spacing;
-  padding: $base-spacing / 3;
-  transition: border-color $base-duration $base-timing;
-  width: 100%;
-
-  &:hover {
-    border-color: shade($base-border-color, 20%);
-  }
-
-  &:focus {
-    border-color: $action-color;
-    box-shadow: $form-box-shadow-focus;
-    outline: none;
-  }
-
-  &:disabled {
-    background-color: shade($base-background-color, 5%);
-    cursor: not-allowed;
-
-    &:hover {
-      border: $base-border;
-    }
-  }
-}
-
-
-
-
-
-/* == ICONS ====================================== */
-
-// Icons UNICODE codes
-$ico-arrow-right:       '\e802';
-$ico-book:              '\e803';
-$ico-caret-down:        '\e804';
-$ico-caret-up:          '\e805';
-$ico-magnifier:         '\e801';
-
-.ico
-{
-    &:before
-    {
-        @include iconify();
-    }
-
-    // Standard triangle
-    &.caret:before
-    {
-        display: inline;
-        content: $ico-caret-down;
-        font-size: 85%;
-    }
-
-    &.book:before { content: $ico-book; }
-    &.magnifier:before { content: $ico-magnifier; }
-}
-
-
-
-
-
-
-// New header
-header {
-    width: 100%;
-    background-color: $vic-green;
-    a {
-        color: #fff;
-       }
-}
-
-nav {
-    ul {
-        display: inline-block;
-        width: 100%;
-    }
-    li {
-        width: 100%;
-        position: relative;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        display: inline-block;
-        &:first-child a {
-            border-top: 0;
-            border-radius: 3px 3px 0 0;
-        }
-        &:last-child a {
-            border-radius: 0 0 3px 3px;
-        }
-    }
-    a {
-        font: {
-            family: $font_heading_family;
-            size: 1.5em;
-            }
-        font-size: 1.5em;
-        background-color: rgba( 0, 0, 0, 0.5);
-        text-align: left;
-        padding: 10px 20px;
-        display: block;
-        border-top: 2px solid rgba(250, 250, 250, 0.15);
-        transition: all 0.3s linear;
-        @include hoverify {
-                background-color: $white;
-                color: $vic-green;
-                border-top: 2px solid $vic-green;
-            }
-
-        
-    }
-}
-
-#header_menu {
-    padding: 20px 30px 30px;
-    h1 {
-        margin: 30px 0 40px 0;
-        width: 100%;
-        text-align: center;
-        a {
-            background-color: transparent;
-
-        }
-    }
-}
-
-#header_logo {
-    width: 380px;
-    ;
-}
-
-#right_cycle_nav {
-    position: relative;
-    right: 0;
-    // '>' icon
-    &:before {
-        float: right;
-        @include iconify ( block, $ico-arrow-right);
-        margin: 0 7px;
-
-    }
-}
-
-#left_cycle_nav.cycle_nav {
-    left: 0;
-    position: static;
-    // '>' icon
-    &:before {
-        float: right;
-        @include iconify ( block, $ico-arrow-right);
-        margin: 0 5px;
-        transform: rotate(180deg);
-
-    }
-}
-
-#secondary_menu {
-    height: 20px;
-
-    .main_wrapper {
-        position: relative;
-        overflow-x: auto;
-        min-height: 45px;
-
-        .sub_wrapper {
-            position: absolute;
-            background-color: rgba(0, 0, 0, 0.4);
-
-        }
-    }
-
-    a.cycle_nav {
-        display: block;
-        background-color: $vic-black;
-        position: absolute;
-        z-index: 2;
-        clear: both;
-        padding: 10px 5px;
-
-        @include hoverify {
-            background-color: $white;
-            color: $vic-black;
-        }
-
-        &.hide_nav_button {
-            display: none;
-        }
-    }
-    ul {
-        padding: 10px 30px;
-        white-space: nowrap;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: -ms-autohiding-scrollbar;
-        clear: right;
-        li {
-            display: inline;
-            width: 33.33%;
-            a {
-                color: $light-gray;
-                font-size: 0.9em;
-                padding: 10px;
-               @include hoverify {
-                    
-                    color: white;
-                    text-decoration: underline;
-                }
-
-            }
-        }
-    }
-}
-
-#nav_search {
-    margin: 30px 0;
-    padding: 10px;
-    background-color: $light-gray;
-    border-radius: $base-border-radius;
-    & input[type=submit] {
-        width: 100%;
-    }
-}
-
-
-
-/* Responsive: Portrait tablets and up */
-
-@media screen and (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-}
-
-.overview h4,
-.overview h2 {
-    margin: 0;
-}
-
-.overview {
-    margin: 5px 0;
-}
