New styles from base topics app

--- a/assets/sass/_settings/_settings.colors.scss
+++ b/assets/sass/_settings/_settings.colors.scss
@@ -7,6 +7,7 @@ $vic-black: #1d2624;
 //TODO: Refactor these to match the naming convention below 
 $green_victoria: $vic-green;
 $black_victoria: $vic-black;
+$green-victoria_study: #549349;
 
 
 // Naming colors 
@@ -28,6 +29,7 @@ $blue_endeavoura: #005ea5;
 $gray_mine_shaft: #333333;
 $gray_dusty_gray: #999999;
 $gray_alto: #dddddd;
+$green-finlandia: #5F6B5F;
 
 
 //TODO: refactor back to values
