--- a/assets/sass/_settings/_settings.other.scss
+++ b/assets/sass/_settings/_settings.other.scss
@@ -4,6 +4,9 @@
 // Border
 $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
+$base_border_radius: 3px;
+
+
 
 // Background Colors
 $base-background-color: #fff;
