--- a/assets/sass/_vic_styles.scss
+++ b/assets/sass/_vic_styles.scss
@@ -33,7 +33,7 @@
 @import '_objects/_objects.base.scss';
 
 // Components -----------------
-@import '_compnents/_compnents.base.scss';
+@import '_components/_components.base.scss';
 
 // Trumps -----------------
 @import '_trumps/_trumps.base.scss';
