--- a/assets/sass/_components/_components.base.scss
+++ b/assets/sass/_components/_components.base.scss
@@ -1,1 +1,4 @@
-@import '_base.icons.scss';
+@import '_components.icons.scss';
+@import '_components.inputs.scss';
+@import '_components.banner.scss';
+@import '_components.tabs_nav.scss';
