--- a/assets/sass/_components/_components.banner.scss
+++ b/assets/sass/_components/_components.banner.scss
@@ -21,7 +21,7 @@
 .banner_title {
     text-align: center;
     h1 {
-        background-color: $green-victoria_study;
+        background-color: $green_victoria_study;
         color: $white;
         font-size: 2em;
         text-transform: capitalize;
