--- a/assets/sass/_components/_components.base.scss
+++ b/assets/sass/_components/_components.base.scss
@@ -2,3 +2,4 @@
 @import '_components.inputs.scss';
 @import '_components.banner.scss';
 @import '_components.tabs_nav.scss';
+@import '_components.tooltips.scss';
