--- a/assets/sass/_settings/_settings.fonts.scss
+++ b/assets/sass/_settings/_settings.fonts.scss
@@ -52,5 +52,5 @@ $heading-font-family: $font_heading_family;
 
 
 // Font Colors
-$base-font-color: $dark-gray;
-$action-color: $blue;
+$base-font-color: $dark_grey;
+$action-color: $blue_action;
