--- a/assets/sass/_components/_components.inputs.scss
+++ b/assets/sass/_components/_components.inputs.scss
@@ -3,10 +3,10 @@
   background-color: $action-color;
   border: 0;
   border-radius: $base-border-radius;
-  color: #fff;
+  color: $white;
   cursor: pointer;
   display: inline-block;
-  font-family: $base-font-family;
+  font-family: $font_body_family;
   font-size: $base-font-size;
   -webkit-font-smoothing: antialiased;
   font-weight: 600;
@@ -20,8 +20,9 @@
 
   &:hover,
   &:focus {
-    background-color: shade($action-color, 20%);
-    color: #fff;
+    background-color: $blue_action_darker;
+    outline: none;
+     
   }
 
   &:disabled {
@@ -29,7 +30,7 @@
     opacity: 0.5;
 
     &:hover {
-      background-color: $action-color;
+      background-color: $blue_action_darker;
     }
   }
 }
@@ -39,10 +40,8 @@
 select[multiple=multiple] {
   background-color: $base-background-color;
   border: $base-border;
-  border-radius: $base-border-radius;
-  box-shadow: $form-box-shadow;
   box-sizing: border-box;
-  font-family: $base-font-family;
+  font-family: $font_body_family;
   font-size: $base-font-size;
   margin-bottom: $small-spacing;
   padding: $base-spacing / 3;
@@ -50,17 +49,16 @@ select[multiple=multiple] {
   width: 100%;
 
   &:hover {
-    border-color: shade($base-border-color, 20%);
+    border-color: $grey_dusty_gray;
   }
 
   &:focus {
     border-color: $action-color;
-    box-shadow: $form-box-shadow-focus;
     outline: none;
   }
 
   &:disabled {
-    background-color: shade($base-background-color, 5%);
+    background-color: $grey_mercury;
     cursor: not-allowed;
 
     &:hover {
