--- a/assets/sass/_settings/_settings.base.scss
+++ b/assets/sass/_settings/_settings.base.scss
@@ -1,4 +1,4 @@
 @import '_settings.colors.scss';
 @import '_settings.fonts.scss';
 @import '_settings.sizes.scss';
-@import '_settings.other.scss';
+@import '_settings.style_variables.scss';
