--- a/generic/_resets.scss
+++ b/generic/_resets.scss
@@ -1,5 +1,10 @@
+/*======================================================
+=            RESETS & STYLES' NORMALISATION            =
+======================================================*/
 
-// Reset styles from Bitter Lib - TODO: Review
+
+// TODO: Review
+// Reset styles from Bitter Lib -
 
 .browsehappy {
     margin: 0.2em 0;
@@ -60,7 +65,7 @@ dl {
 
 
 // From Victori SASS repo _reset.scss file TODO: Review
-//  _reset.scss 
+//  _reset.scss
 // -------------------------------------------------------------
 
 // Display in IE6-9 and FF3
