--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -1,3 +1,8 @@
+/*==================================================
+=            GRID CONSTRUCTING ELEMENTS            =
+==================================================*/
+
+
 .wrapper {
     @include outer-container;
 }
