[HOTFIX] Fixes SASS compilation error by changing the naming, structure and fixing variables.

--- a/_vic-styles.scss
+++ b/_vic-styles.scss
@@ -2,10 +2,7 @@
 =            VICTORIA UNIVERSITY OF WELLINGTON STYLES            =
 ================================================================*/
 
-// Base - Unclassed elements; Type slectors - h1-h6, links, lists ect
-// Objects - Design patterns; No cosmetics
-// Components - Designed pieces of UI, only classes.
-// Trumps (Outdo) - Overrides; Helper classes, only effect one part of DOM
+// Trumps (Outdo) -
 
 
 /*----------  1) 3rd party libraries  ----------------------------------------*/
