--- a/base/_layout.scss
+++ b/base/_layout.scss
@@ -23,8 +23,6 @@ html {
     //-ms-text-size-adjust: 100%;
 }
 
-
-
 nav {
     ul {
         display: inline-block;
@@ -67,4 +65,4 @@ nav {
     }
 }
 
-/*
+*/
