--- a/components/_banners.scss
+++ b/components/_banners.scss
@@ -1,3 +1,8 @@
+/*===============================
+=            BANNERS            =
+===============================*/
+
+
 .topic_banner {
     max-height: 500px;
     overflow: hidden;
@@ -13,7 +18,7 @@
 }
 
 .banner_text {
-    @include position(absolute, 20% null null null);
+    @include position( absolute, 20% null null null );
     @include span-columns(6);
     @include shift(3);
 }
@@ -21,25 +26,25 @@
 .banner_title {
     text-align: center;
     h1 {
-        background-color: $green_victoria_study;
+        background-color: $green-victoria-study;
         color: $white;
         font-size: 2em;
         text-transform: capitalize;
         display: inline-block;
         @include pad(20px 30px);
         @include margin(0 0 20px 0);
-        @include border-top-radius($base_border_radius);
-        @include border-bottom-radius($base_border_radius);
+        @include border-top-radius( $base-border-radius );
+        @include border-bottom-radius( $base-border-radius );
     }
 }
 
 .banner_sub_title {
-    @include margin(40px 0 0 0);
+    @include margin( 40px 0 0 0 );
     border-top: 1px $white solid;
     text-align: center;
     h2 {
 
-        font-family: $font_body_family;
+        font-family: $base-font-family;
         font-weight: lighter;
         color: $white;
         font-size: 1.5em;
