--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -1,4 +1,7 @@
-/* == ICONS ====================================== */
+/*=======================================
+=            BUTTONS & LINKS            =
+=======================================*/
+
 
 // Icons UNICODE codes
 $ico-arrow-right:       '\e802';
