--- a/components/_tooltips.scss
+++ b/components/_tooltips.scss
@@ -1,3 +1,10 @@
+/*================================
+=            TOOLTIPS            =
+================================*/
+
+
+
+
 #tooltip {
     text-align: center;
     color: $white;
