--- a/trumps/_new-navigation.scss
+++ b/trumps/_new-navigation.scss
@@ -1,3 +1,11 @@
+/*=============================================
+=            REDESIGNED NAVIGATION            =
+=============================================*/
+
+
+
+
+
 #nav_search {
     margin: 30px 0;
     padding: 10px;
@@ -57,7 +65,7 @@
                 font-size: 0.9em;
                 padding: 10px;
                @include hoverify {
-                    
+
                     color: white;
                     text-decoration: underline;
                 }
