--- a/objects/_objects.base.scss
+++ b/objects/_objects.base.scss
@@ -5,4 +5,7 @@
 // Design patterns without any cosmetic details.
 
 
-@import 'grid.scss';
+@import 'objects.grid.scss';
+@import 'objects.typography.scss';
+@import 'objects.buttons.scss';
+@import 'objects.icons.scss';
