--- a/settings/_settings.fonts.scss
+++ b/settings/_settings.fonts.scss
@@ -6,6 +6,8 @@
 /* ===== FONT CONSTANTS ===================================================== */
 
 $font-victoria:         'National' !default;
+$font-oxygen:           'Oxygen' !default;
+
 $font-victoria-icons:   'VicIcons' !default;
 
 $weight-thin:       200 !default;
@@ -15,7 +17,3 @@ $weight-semibold:   600 !default;
 $weight-bold:       700 !default;
 $weight-extrabold:  800 !default;
 
-
-/* ===== FONT ICON'S CODES ================================================== */
-
-$ico-code-arrow-down: '\u3414';
