--- a/tools/_tools.base.scss
+++ b/tools/_tools.base.scss
@@ -4,5 +4,9 @@
 
 /* Global Mixins & Helper functions. */
 
-// *Note*: Imports are order sensitive!
-@import 'mixins.scss';
+// *Note*: Imports are order sensitive
+
+
+// Victoria mixins collection
+@import 'tools.mixins.scss';
+
