--- a/trumps/_trumps.base.scss
+++ b/trumps/_trumps.base.scss
@@ -6,4 +6,4 @@
 // (*CAN* contain !important, *SHOULD* affect only one part of the DOM at a time.
 
 
-@import 'new-navigation.scss';
+@import 'trumps.new-navigation.scss';
