--- a/generic/_generic.fonts.scss
+++ b/generic/_generic.fonts.scss
@@ -3,7 +3,7 @@
 =======================================*/
 
 
-/* ===== IMPORT & DEFINE FONTS ============================================== */
+/* ===== DEFINE & IMPORT FONTS ============================================== */
 
 // Victoria's
 @include font-face( $font-victoria, "#{$path-font-victoria}-Regular", $weight-normal, $file-formats: eot woff ttf );
@@ -14,4 +14,4 @@
 @import url( "#{$path-font-oxygen}" );
 
 // Font icons
-@include font-face( $font-victoria-icons, "#{$path-fonticon-victoria}", $weight-extrabold, $file-formats: eot woff ttf svg );
+@include font-face( $font-victoria-icons, "#{$path-fonticon-victoria}", $file-formats: eot woff ttf svg );
