--- a/trumps/_trumps.new-navigation.scss
+++ b/trumps/_trumps.new-navigation.scss
@@ -99,7 +99,7 @@
     // '>' icon
     &:before {
         float: right;
-        @include iconify ( block, $ico-arrow-right);
+        //@include iconify ( block, $ico-arrow-right);
         margin: 0 7px;
 
     }
@@ -111,7 +111,7 @@
     // '>' icon
     &:before {
         float: right;
-        @include iconify ( block, $ico-arrow-right);
+        //@include iconify ( block, $ico-arrow-right);
         margin: 0 5px;
         transform: rotate(180deg);
 
